--- a/app-examples/counter-app/manifests/svc.yaml
+++ b/app-examples/counter-app/manifests/svc.yaml
@@ -1,11 +1,12 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: sample-counter-service
-  annotations:
-    prometheus.io/scrape: "true"
-    prometheus.io/path: "/metrics"
-    prometheus.io/port: "80"
+  # annotations:
+  #   prometheus.io/scrape: "true"
+  #   prometheus.io/path: "/metrics"
+  #   prometheus.io/port: "80"
 spec:
   type: LoadBalancer
   selector:
